RESUB: Fix For Button Spacing Issues

--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -8,6 +8,7 @@
     outline: none !important;
     border: none !important;
     transition: all 0.5s ease-in-out;
+    margin-bottom: 0.65rem;
  }
 
  .Button:hover {
